# accounting-tool

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: PRD.md
docs/issues/: 01-pipeline-skeleton-single-item-margin.md  02-loyverse-api-sync.md  03-receipt-ingestion-pipeline.md  04-recipe-and-item-cost-engine.md  05-keg-inventory-weekly-weighing.md  06-cafe-stock-counts-accrual-cogs.md  07-segment-tagging-and-contribution-margin.md  08-fixed-costs-monthly-accrual-pnl.md  09-cash-drawer-reconciliation-handoff.md  10-anomaly-detection-voids-drawer.md  11-daily-9am-review-view.md  12-admin-checklists-partner-task-assignment.md
src/tangerine/: __init__.py  __main__.py  approvals.py  cafe_stock.py  cash_drawer.py  cost.py  ingestion.py  keg_inventory.py  margin.py  monthly_pnl.py  pipeline.py  receipts.py  recipes.py  seeded.py  seeded_receipts.py  segments.py  types.py
src/tangerine/loyverse/: __init__.py  config.py  http.py  parser.py  payloads.py  source.py  store.py  sync.py
tests/: test_cafe_stock_e2e.py  test_cash_drawer_e2e.py  test_keg_inventory_e2e.py  test_loyverse_sync_e2e.py  test_monthly_pnl_e2e.py  test_pipeline_e2e.py  test_receipts_e2e.py  test_recipes_e2e.py  test_segment_contribution_margin_e2e.py
