[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tangerine-accounting"
version = "0.1.0"
description = "Tangerine Phuket bar & cafe accounting tool"
requires-python = ">=3.12"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tangerine = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
packages = ["tangerine"]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
